<resources>
    <string name="app_name" translatable="false">Valencia Tour Guide</string>
    <string name="category_historic">Historic Places</string>
    <string name="category_parks">Parks and activities</string>
    <string name="category_musseums">Musseums</string>
    <string name="category_theaters">Theaters</string>
    <string name="category_transport">Transport</string>
    <string name="category_credits">Credits</string>
    <string name="details">Details</string>
    <string name="noGeoData">No map coordinates available</string>
    <string name="noMapsApp">No app available to show the map</string>
    <string name="noWebPage">No web page provided for this POI</string>
    <string name="mus_muvim_name" translatable="false">MuVIM</string>
    <string name="mus_muvim_geo" translatable="false">39.469823,-0.381111</string>
    <string name="mus_muvim_desc" translatable="false">Museu Valencià de la Il·lustració i la Modernitat</string>
    <string name="mus_muvim_url" translatable="false">http://www.muvim.es/</string>
    <string name="mus_muvim_not" translatable="false">De Informacion Muvim - Trabajo propio, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=47745903</string>
    <string name="mus_patri_name" translatable="false">Museu del Patriarca</string>
    <string name="mus_patri_geo" translatable="false">39.472351,-0.373076</string>
    <string name="mus_patri_desc" translatable="false">Museu del Patriarca</string>
    <string name="mus_patri_url" translatable="false">http://patriarcavalencia.es</string>
    <string name="mus_patri_not" translatable="false">By Felivet - Own work, Public Domain, https://commons.wikimedia.org/w/index.php?curid=3752881</string>
    <string name="mus_ba_name" translatable="false">Museu de Belles Arts</string>
    <string name="mus_ba_url" translatable="false">http://www.museobellasartesvalencia.gva.es/</string>
    <string name="mus_ba_not" translatable="false">De Felivet - Trabajo propio, Dominio público, https://commons.wikimedia.org/w/index.php?curid=3637537</string>
    <string name="mus_ba_desc" translatable="false">Museu de Belles Arts de València</string>
    <string name="mus_ba_geo" translatable="false">39.479128,-0.371062</string>
    <string name="mus_prehis_name" translatable="false">Museu de Prehistòria</string>
    <string name="mus_prehis_geo" translatable="false">39.478299,-0.383110</string>
    <string name="mus_prehis_desc" translatable="false">Museu de Prehistòria de València</string>
    <string name="mus_prehis_not" translatable="false">De Joanbanjo - Trabajo propio, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=15820763</string>
    <string name="mus_prehis_url" translatable="false">http://www.museuprehistoriavalencia.es/</string>
    <string name="mus_ivam_name" translatable="false">IVAM</string>
    <string name="mus_ivam_geo" translatable="false">39.479635,-0.382922</string>
    <string name="mus_ivam_desc" translatable="false">Institut Valencià d\'Art Modern</string>
    <string name="mus_ivam_not" translatable="false">De Silvestre, Valencia (Spain) - Trabajo propio, Camera: Mini PenCam©., CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=321140</string>
    <string name="mus_ivam_url" translatable="false">http://www.ivam.es/</string>
    <string name="mus_mhv_name" translatable="false">MhV</string>
    <string name="mus_mhv_geo" translatable="false">39.472547,-0.408483</string>
    <string name="mus_mhv_desc" translatable="false">Museu d’Història de València</string>
    <string name="mus_mhv_not" translatable="false">De Josep-Manel Vert - Museo de historia de Valencia, Dominio público, https://commons.wikimedia.org/w/index.php?curid=9085239</string>
    <string name="mus_mhv_url" translatable="false">http://www.valencia.es/mhv</string>
    <string name="mus_carme_name" translatable="false">Centre del Carme</string>
    <string name="mus_carme_geo" translatable="false">39.479561,-0.379123</string>
    <string name="mus_carme_desc" translatable="false">Centre del Carme - Cultura Contemporània</string>
    <string name="mus_carme_not" translatable="false">De Un valencià - Trabajo propio, Dominio público, https://commons.wikimedia.org/w/index.php?curid=4137041</string>
    <string name="mus_carme_url" translatable="false">http://www.consorcimuseus.gva.es/centro-del-carmen/?lang=es</string>
    <string name="credits_text_1">Points of Interes and pictures: www.wikipedia.com</string>
    <string name="credits_text_2">Picture credits available below each image</string>
    <string name="credits_text_3">Geo coordinates: Google Maps</string>
    <string name="his_pvirgen_name" translatable="false">Plaça de la Mare de Déu</string>
    <string name="his_pvirgen_desc" translatable="false">Plaza de la Virgen</string>
    <string name="his_pvirgen_not" translatable="false">De Diego Delso, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=34946190</string>
    <string name="his_pvirgen_geo" translatable="false">39.476330,-0.375308</string>
    <string name="his_pvirgen_url" translatable="false" />
    <string name="his_tquart_name" translatable="false">Torres de Quart</string>
    <string name="his_tquart_geo" translatable="false">39.475743,-0.383889</string>
    <string name="his_tquart_desc" translatable="false">Torres de Quart</string>
    <string name="his_tquart_not" translatable="false">De Arne Hückelheim - Trabajo propio, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=9987345</string>
    <string name="his_tquart_url" translatable="false" />
    <string name="his_tserranos_name" translatable="false">Torres dels Serrans</string>
    <string name="his_tserranos_geo" translatable="false">39.479192,-0.376002</string>
    <string name="his_tserranos_desc" translatable="false">Torres de Serranos</string>
    <string name="his_tserranos_not" translatable="false">De Diego Delso, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=35074193</string>
    <string name="his_tserranos_url" translatable="false" />
    <string name="his_lonja_name" translatable="false">Llotja de la Seda</string>
    <string name="his_lonja_geo" translatable="false">39.474373,-0.378328</string>
    <string name="his_lonja_desc" translatable="false">Lonja de la Seda de Valencia o Lonja de los Mercaderes</string>
    <string name="his_lonja_not" translatable="false">De Emilio García from Parla, Spain - Lonja de Valencia, CC BY-SA 2.0, https://commons.wikimedia.org/w/index.php?curid=6831222</string>
    <string name="his_lonja_url" translatable="false" />
    <string name="his_mcentral_name" translatable="false">Mercado Central de Valencia</string>
    <string name="his_mcentral_desc" translatable="false">Mercado Central de Valencia</string>
    <string name="his_mcentral_geo" translatable="false">39.473597,-0.378983</string>
    <string name="his_mcentral_not" translatable="false">De M4n0locervera - Trabajo propio, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=21426156</string>
    <string name="his_mcentral_url" translatable="false">https://www.mercadocentralvalencia.es/</string>
    <string name="his_predonda_name" translatable="false">Plaça Redona</string>
    <string name="his_predonda_geo" translatable="false">39.473663,-0.376494</string>
    <string name="his_predonda_desc" translatable="false">Plaza redonda de Valencia</string>
    <string name="his_predonda_not" translatable="false">By Joanbanjo - Treball propi, Domini públic, https://commons.wikimedia.org/w/index.php?curid=8782805</string>
    <string name="his_predonda_url" translatable="false" />
    <string name="his_micalet_name" translatable="false">Torre del Micalet</string>
    <string name="his_micalet_geo" translatable="false">39.475335,-0.375630</string>
    <string name="his_micalet_desc" translatable="false">Torre del Miguelete</string>
    <string name="his_micalet_not" translatable="false">De Rafa Esteve - Trabajo propio, CC BY-SA 3.0 es, https://commons.wikimedia.org/w/index.php?curid=28471979</string>
    <string name="his_micalet_url" translatable="false" />
    <string name="title_activity_maps">Map</string>
    <string name="parks_bioparc_name" translatable="false">Bioparc</string>
    <string name="parks_bioparc_geo" translatable="false">39.478060,-0.407570</string>
    <string name="parks_bioparc_desc" translatable="false">Bioparc Valencia</string>
    <string name="parks_bioparc_not" translatable="false">De Gabriel Villena from Albacete, España - Bioparc Valencia IIUploaded by Jacopo Werther, CC BY 2.0, https://commons.wikimedia.org/w/index.php?curid=24653378</string>
    <string name="parks_bioparc_url" translatable="false">http://www.bioparcvalencia.es/</string>
    <string name="parks_hemisferic_name" translatable="false">L\'Hemisfèric</string>
    <string name="parks_hemisferic_geo" translatable="false">39.456685,-0.353884</string>
    <string name="parks_hemisferic_desc" translatable="false">El Hemisférico</string>
    <string name="parks_hemisferic_not" translatable="false">De Diego Delso, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=34921514</string>
    <string name="parks_hemisferic_url" translatable="false">http://www.cac.es/hemisferic</string>
    <string name="parks_museu_name" translatable="false">Museo de las Ciencias</string>
    <string name="parks_museu_geo" translatable="false">39.456021,-0.351928</string>
    <string name="parks_museu_desc" translatable="false">Museo de las Ciencias Príncipe Felipe</string>
    <string name="parks_museu_not" translatable="false">De Diego Delso, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=34921604</string>
    <string name="parks_museu_url" translatable="false">http://www.cac.es/museu/home</string>
    <string name="parks_oceanografic_name" translatable="false">L\'Oceanogràfic</string>
    <string name="parks_oceanografic_geo" translatable="false">39.453059,-0.347158</string>
    <string name="parks_oceanografic_desc" translatable="false">El Oceanográfico</string>
    <string name="parks_oceanografic_not" translatable="false">De Diliff - Trabajo propio, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=6563021</string>
    <string name="parks_oceanografic_url" translatable="false">http://www.cac.es/oceanografic</string>
    <string name="parks_gulliver_name" translatable="false">Gulliver</string>
    <string name="parks_gulliver_geo" translatable="false">39.462525,-0.359594</string>
    <string name="parks_gulliver_desc" translatable="false">Parque Gulliver</string>
    <string name="parks_gulliver_not" translatable="false">De http://www.flickr.com/photos/puroticorico/ - flickr.com, CC BY 2.0, https://commons.wikimedia.org/w/index.php?curid=3663864</string>
    <string name="parks_viveros_name" translatable="false">Jardines del Real</string>
    <string name="parks_viveros_not" translatable="false">De Joanbanjo - Trabajo propio, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=12732007</string>
    <string name="parks_viveros_geo" translatable="false">39.480541,-0.367709</string>
    <string name="parks_viveros_desc" translatable="false">Jardines del Real o jardín de viveros</string>
    <string name="parks_gulliver_url" translatable="false" />
    <string name="parks_viveros_url" translatable="false" />
    <string name="parks_monforte_name" translatable="false">Jardín de Monforte</string>
    <string name="parks_monforte_geo" translatable="false">39.477506,-0.364686</string>
    <string name="parks_monforte_desc" translatable="false">Jardín de Monforte</string>
    <string name="parks_monforte_not" translatable="false">De Onderwijsgek - Trabajo propio, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=20703329</string>
    <string name="parks_monforte_url" translatable="false" />
    <string name="parks_turia_name" translatable="false">Jardín del Turia</string>
</resources>