<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.tourguide.MainActivity">

    <TextView
        style="@style/creditsTitle"
        android:text="@string/category_credits" />

    <TextView
        style="@style/creditsElement"
        android:text="@string/credits_text_1" />

    <TextView
        style="@style/creditsElement"
        android:text="@string/credits_text_2" />

    <TextView
        style="@style/creditsElement"
        android:text="@string/credits_text_3" />

</LinearLayout>